--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	 		<div class="advantages">
 	 			<div class="advantages_item">
 		 			<img src="/Users/ViacheslavShevcenko/WORK/REPOSITORIES/slavetch.github.io/Assets/Images/Main Container/boxing-4237010_1280.png" alt="">
-		 			<h2>Drink woter!</h2>
+		 			<h2>Drink water!</h2>
 		 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut officiis commodi neque aspernatur molestias quas.</p>
 		 		</div>
 		 		<div class="advantages_item">
