--- a/location.html
+++ b/location.html
@@ -31,7 +31,7 @@
 	 	</div>
 </header>
 <main>
-	 <h1 id="location_banner">МЫ НАХОДИМСЯ</h1>
+	 <h1 id="location_banner">МЫ НАХОДИМСЯ:</h1>
 	 <div id="map">
 	 	
 	 </div>
