--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
 	 		<div class="graficlogo"><a href="index.html"><img  src="Assets/Images/MY LOGO/MyLogoInvert.png" alt="Viacheslav & co">
 	 		</a>
 	 		</div>
-	 		<div class="slogan"><h1>МОЙ ПЕРВЫЙ САЙТ!&#128513;</h1></div>
+	 		<div class="slogan"><h1>Lorem ipsum dolor</h1></div>
 	 		<nav>
 	 			<ul class="topnav" id="myTopnav">
 		 			<a href="index.html">ДОМОЙ</a>
