w3c compliance logo insertion
This document validates as CSS level 3 !

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
 </header>
 	 
 <main>
+	<Р>
+    <a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img style = "border: 0; ширина: 88px; высота: 31px"
+            SRC = "https://jigsaw.w3.org/css-validator/images/vcss"
+            alt = "Действительный CSS!" />
+    </a>
+</ Р>
 	<img src="Assets/Images/sunset.jpg" alt="MyPhoto" class="mw-100">
 	<div class="advantages_container">
 		<div class="advantages">
